[tool.poetry]
name = "audio-files-to-pomodoro-counts"
version = "0.1.0"
description = ""
authors = ["Dmytro Chasovskyi <dmitriy.chasovskoy@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
mutagen = "^1.42"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
